# project-template-no-docs

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  pytest.ini
.github/ISSUE_TEMPLATE/: bug.yml  future-request.yml  question.yml
.github/workflows/: CI.yml  publish.yml
tests/: conftest.py
